--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -17,7 +17,7 @@
 </div>
 <div class="field">
   <div class="control">
-    <%= f.input :creator, label: "Creator display name", input_html: { class: "input"}, wrapper: false, label_html: {class: "label"} %>
+    <%= f.input :creator_display_name, label: "Creator display name", input_html: { class: "input"}, wrapper: false, label_html: {class: "label"} %>
   </div>
 </div>
 <%= f.button :submit, class: "button is-primary" %>
