--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,5 +1,13 @@
-<h1>New Event</h1>
-
-<%= render 'form', event: @event %>
-
-<%= link_to 'Back', events_path %>
+<section class="section">
+  <div class="container">
+    <div class="block">
+      <h1 class="title">Create your event</h1>
+    </div>
+    <div class="block">
+      <%= render 'events/form' %>
+    </div>
+    <div class="block">
+      <%= link_to 'Back', root_path, class: "button is-link" %>
+    </div>
+  </div>
+</section>
