--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,33 +1,23 @@
-<p id="notice"><%= notice %></p>
-
-<h1>Events</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Location</th>
-      <th>Date</th>
-      <th>Host</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @events.each do |event| %>
-      <tr>
-        <td><%= event.name %></td>
-        <td><%= event.location %></td>
-        <td><%= event.date %></td>
-        <td><%= event.host %></td>
-        <td><%= link_to 'Show', event %></td>
-        <td><%= link_to 'Edit', edit_event_path(event) %></td>
-        <td><%= link_to 'Destroy', event, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+<section class = "section">
+  <div class = "container">
+    <% if user_signed_in? %>
+      <div class = "block">
+        <%= link_to 'New Event', new_event_path, class: "button is-link" %>
+      </div>
+      <% @events.each do | event | %>
+        <div class="box">
+          <div class="content">
+            <h2 class="title"><%= event.name %></h2>
+            <p>Date: <%= event.date %></p>
+            <p>Location: <%= event.location %></p>
+            <p>Creator: <%= event.creator_display_name %></p>
+          </div>
+        </div>
+      <% end %>
+      <% else %>
+      <div class = "block">
+        Please <a href="<%= new_user_session_path%>"> Sign in</a> or <a href="<%= new_user_registration_path%>">Sign Up</a> for an account to create events and see your created events.
+      </div>
     <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Event', new_event_path %>
+  </div>
+</section>
