--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,22 +1,23 @@
-<section class = "section">
-  <div class = "container">
+<section class= "section">
+  <div class= "container">
+    <h1 class= "title is-1">All Events<h1>
     <% if user_signed_in? %>
-      <div class = "block">
+      <div class= "block">
         <%= link_to 'New Event', new_event_path, class: "button is-link" %>
       </div>
-      <% @events.each do | event | %>
-        <div class="box">
-          <div class="content">
-            <h2 class="title"><%= event.name %></h2>
-            <p>Date: <%= event.date %></p>
-            <p>Location: <%= event.location %></p>
-            <p>Creator: <%= event.creator_display_name %></p>
-          </div>
-        </div>
-      <% end %>
       <% else %>
-      <div class = "block">
+      <div class= "block">
         Please <a href="<%= new_user_session_path%>"> Sign in</a> or <a href="<%= new_user_registration_path%>">Sign Up</a> for an account to create events and see your created events.
+      </div>
+    <% end %>
+    <% @events.each do | event | %>
+      <div class= "box">
+        <div class= "content">
+          <h2 class= "title"><%= event.name %></h2>
+          <p>Date: <%= event.date %></p>
+          <p>Location: <%= event.location %></p>
+          <p>Creator: <%= event.creator_display_name %></p>
+        </div>
       </div>
     <% end %>
   </div>
