--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,16 +1,23 @@
 <section class="section">
   <div class="container">
     <h1 class="title">
-      Created events
+      Your Created events
     </h1>
   </div>
 </section>
 <section class="section">
   <div class="container">
     <% if current_user.created_events.any? %>
-      <div class = "block">
-        You have created events.
-      </div>
+      <% current_user.created_events.each do | event | %>
+        <div class= "box">
+          <div class= "content">
+            <h2 class= "title"><%= event.name %></h2>
+            <p>Date: <%= event.date %></p>
+            <p>Location: <%= event.location %></p>
+            <p>Creator: <%= event.creator_display_name %></p>
+          </div>
+        </div>
+      <% end %>
       <% else %>
       <div class = "block">
         You have no created events.
