--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,27 +1,54 @@
 <section class="section">
   <div class="container">
-    <h1 class="title">
-      Your Created events
-    </h1>
+    <div class="block">
+      <h1 class="title">
+        <%= current_user.name %>'s created events
+      </h1>
+    </div>
+    <div class="block">
+      <% if current_user.created_events.any? %>
+        <% current_user.created_events.each do | event | %>
+          <%= render partial: "events/event_box", locals: {event: event} %>
+        <% end %>
+        <% else %>
+        <div class = "block">
+          <% current_user.name %> has no created events.
+        </div>
+      <% end %>
+    </div>
   </div>
 </section>
 <section class="section">
   <div class="container">
-    <% if current_user.created_events.any? %>
-      <% current_user.created_events.each do | event | %>
-        <div class= "box">
-          <div class= "content">
-            <h2 class= "title"><%= event.name %></h2>
-            <p>Date: <%= event.date %></p>
-            <p>Location: <%= event.location %></p>
-            <p>Creator: <%= event.creator_display_name %></p>
-          </div>
+    <h1 class="title">
+      <%= current_user.name %>'s attended events
+    </h1>
+    <div class="columns">
+      <div class="column">
+        <h2 class="title is-4">Future events</h2>
+          <% if current_user.attended_events.where("date >= ?", DateTime.now) %>
+            <% current_user.attended_events.where("date >= ?", DateTime.now).find_each do | event | %>
+              <%= render partial: "events/event_box", locals: {event: event} %>
+            <% end %>
+            <% else %>
+            <div class = "block">
+              <% current_user.name %> is attending no future events.
+            </div>
+          <% end %>
         </div>
-      <% end %>
-      <% else %>
-      <div class = "block">
-        You have no created events.
+        <div class="column">
+          <h2 class="title is-4">Past events</h2>
+            <% if current_user.attended_events.where("date < ?", DateTime.now) %>
+              <% current_user.attended_events.where("date < ?", DateTime.now).find_each do | event | %>
+                <%= render partial: "events/event_box", locals: {event: event} %>
+              <% end %>
+              <% else %>
+              <div class = "block">
+                <% current_user.name %> has attended no previous events.
+              </div>
+            <% end %>
+        </div>
       </div>
-    <% end %>
+    </div>
   </div>
 </section>
