--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -44,7 +44,7 @@
         <div class="navbar-end">
           <% if user_signed_in? %>
             <a class= "control">
-              <%= link_to current_user.name, edit_user_registration_path, class: "navbar-item"%>
+              <%= link_to current_user.name, user_path(current_user.id), class: "navbar-item"%>
             </a>
             <a class=control>
               <%= link_to "Logout", destroy_user_session_path, method: :delete, class: "navbar-item" %>
