--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -11,14 +11,7 @@
       </div>
     <% end %>
     <% @events.each do | event | %>
-      <div class= "box">
-        <div class= "content">
-          <a href= "<%= event_path(event) %>" class= "title"><%= event.name %></a>
-          <p>Date: <%= event.date %></p>
-          <p>Location: <%= event.location %></p>
-          <p>Creator: <%= event.creator_display_name %></p>
-        </div>
-      </div>
+      <%= render partial: "events/event_box", locals: {event: event} %>
     <% end %>
   </div>
 </section>
